# AIchan

./: .gitignore  README.md  config.yaml.example  pyproject.toml  run.bat  run.ps1
.github/workflows/: release.yml
aichan/: __init__.py  config.py  gpu_lock.py  main.py  orchestrator.py  services.py  settings.py  updater.py
aichan/discord_bot/: __init__.py  bot.py
aichan/llm/: __init__.py  client.py  prompt.py  schema.py
aichan/memory/: __init__.py  db.py  store.py  summarize.py
aichan/scheduler/: __init__.py  jobs.py
aichan/stt/: __init__.py  mic.py  recognizer.py
aichan/tts/: __init__.py  irodori.py  manager.py  player.py  server.py
aichan/ui/: __init__.py  character_window.py  settings_dialog.py
aichan/vision/: __init__.py  screen.py
assets/characters/sumire/: persona.md
docs/: character-image-prompts.md  specification.md
packaging/: BUILD.md  aichan.spec  launcher.py
tools/: remove_bg.py  test_llm.py  test_tts.py
